[gd_scene load_steps=7 format=3 uid="uid://b0jkoxdsy7yd5"]

[ext_resource type="Script" path="res://scene/UI/plant_item.gd" id="1_f2wr7"]
[ext_resource type="Texture2D" uid="uid://d0o337llu3c74" path="res://texture/Farm Items.png" id="3_5g62r"]
[ext_resource type="FontFile" uid="uid://b728l4dyxoj31" path="res://texture/Kenney Mini.ttf" id="4_fb672"]

[sub_resource type="AtlasTexture" id="AtlasTexture_amkqe"]
atlas = ExtResource("3_5g62r")
region = Rect2(1010, 1490, 240, 240)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ccsx7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o53nk"]
bg_color = Color(0, 0.521569, 0.160784, 1)

[node name="PlantItem" type="Control" groups=["PlantItem"]]
custom_minimum_size = Vector2(391, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 391.0
offset_bottom = 80.0
script = ExtResource("1_f2wr7")

[node name="IconBackground" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_amkqe")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="IconBackground"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="PlantName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_bottom = 47.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_fb672")
theme_override_font_sizes/font_size = 34

[node name="PlantPrice" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -42.0
offset_right = -198.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_fb672")
theme_override_font_sizes/font_size = 30

[node name="BuyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_fb672")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ccsx7")
theme_override_styles/normal = SubResource("StyleBoxFlat_o53nk")
text = "Buy"

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
